--- a/force-app/main/default/lwc/weatherWidget/weatherWidget.html
+++ b/force-app/main/default/lwc/weatherWidget/weatherWidget.html
@@ -144,7 +144,6 @@
       <lightning-card  title="Weather">
       <lightning-button-group slot="actions" style="background-color:#16325c;padding:0.5rem">
           <lightning-button label="Refresh"  onclick={handleRefresh}></lightning-button>
-          <lightning-button label="Edit" onclick={handleEdit}></lightning-button>
       </lightning-button-group>
 
       <div class="slds-var-p-horizontal_small">
@@ -162,7 +161,7 @@
                       onclick={handleFormSave}>Save</button>
                  </div>  
           </template>
-          <template if:false={isFormEnabled}>
+          <template if:false = {isFormEnabled}>
               <div class="slds-grid slds-gutters">
                   <div class="slds-grid slds-col slds-size_2-of-3 slds-wrap">
                    
@@ -173,10 +172,23 @@
                       <div class="slds-col slds-size_1-of-2">Weather : </div>
                       <div class="slds-col slds-size_1-of-2">{weatherDescription}</div>
                   </div>
-                 <div class="slds-col slds-size_1-of-7">
+                 
+                  <div class="slds-col slds-size_1-of-7">
                       <img src={weatherIcon}>
                   </div> 
-              </div>
+                </div>
+                  <div class="slds-grid slds-gutters slds-wrap">
+                    <div class="slds-col slds-size_1-of-1">
+                          <lightning-input type="text" name="inputCity" label="Enter City"
+                          placeholder="London, UK"
+                          onchange={updateValue}  >
+                          </lightning-input>
+                    </div>   
+                    </div>
+                    <div style="background-color:#16325c;padding:0.5rem">
+                        <button class="slds-button slds-button_inverse" label="Save" title="Save"
+                        onclick={handleFormSave}>Save</button>
+                   </div>     
           </template>
       </div>
   </lightning-card>
